deploy/core.yml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: bff
spec:
  template:
    metadata:
      labels:
        app: bff
    spec:
      containers:
        - name: bff
          image: recuencojones/caddy-frontend-bff:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 1m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: frontend-webpack
spec:
  template:
    metadata:
      labels:
        app: frontend-webpack
    spec:
      containers:
        - name: frontend-webpack
          image: recuencojones/caddy-frontend-webpack:latest
          ports:
            - containerPort: 2015
          resources:
            requests:
              cpu: 1m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 64Mi
