deploy/services.yml
kind: Service
apiVersion: v1
metadata:
  name: bff-3000
spec:
  selector:
    app: bff
  ports:
    - name: bff-3000
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: frontend-webpack-2015
spec:
  selector:
    app: frontend-webpack
  ports:
    - name: frontend-webpack-2015
      port: 2015
      targetPort: 2015
  type: ClusterIP
