deploy/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  labels:
    app: frontend-webpack
  name: frontend-webpack
spec:
  tls:
  - hosts:
    - frontend.recuencojones.usw1.kubesail.io
    secretName: frontend-webpack-ingress
  rules:
  - host: frontend.recuencojones.usw1.kubesail.io
    http:
      paths:
      - backend:
          serviceName: frontend-webpack-2015
          servicePort: 2015
